# Qml-Tasks

Button/: Button.pro  integrate.cpp  integrate.h  main.cpp  main.qml
Classes/: Classes.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  test.cpp  test.h  test.ui
LMS-QML/: .qml  LMS-QML.pro  login.qml  main.cpp  main.qml  sqldatabase.cpp  sqldatabase.h
Tumbler/: main.qml
cmakepractice/: CMakeLists.txt  main.cpp
cmakepractice/test/: CMakeLists.txt  test.cpp  test.h
cppintegration/: main.cpp  main.qml  test.cpp  test.h
fail/: main.qml
googletest/: CMakeLists.txt
googletest/SqlDataBase/: AssetManagerDBServiceInterface.h  CMakeLists.txt  assetmanagerdbservice.cpp  assetmanagerdbservice.h
googletest/SqlDataBase/_test/: CMakeLists.txt
login/: dialog.cpp  dialog.h  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
timer/: main.qml
